<resources>
    <string name="app_name">Movies</string>

    <!-- 通用的 -->
    <string name="user_token">user_token</string>
    <string name="favorite_movie_id">favorite_movie_id</string>
    <string name="seen_movie_id">seen_movie_id</string>
    <string name="like_review_id">like_review_id</string>
    <string name="like_comment_id">like_comment_id</string>
    <string name="like_rate_id">like_rate_id</string>
    <string name="auto_login">auto_login</string>



    <string name="event_login_success">event_login_success</string>
    <string name="event_login_fail">event_login_fail</string>
    <string name="event_pick_movie">event_pick_movie</string>

    <string name="common_username_input_hint">输入用户名</string>
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">The two password entries are inconsistent, please re-enter.</string>


    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>

    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>

    <string name="common_loading">Loading&#8230;</string>

    <string name="common_confirm">Confirm</string>
    <string name="common_cancel">Cancel</string>

    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>

    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>

    <string name="common_network">There is currently no network connection, please check network settings</string>

    <!-- 网络请求 -->
    <string name="http_loading">Loading&#8230;</string>

    <string name="http_unknown_error">Error request, unknown error</string>
    <string name="http_account_error">Account is abnormal, please log in again</string>
    <string name="http_data_explain_error">Data analysis exception</string>
    <string name="http_server_out_time">Server request timed out, please try again later</string>
    <string name="http_network_error">Request failed, please check network settings</string>
    <string name="http_response_error">Server responded abnormally, please try again later</string>
    <string name="http_server_error">Server connection is abnormal, please try again later</string>
    <string name="http_request_cancel">Request was interrupted, please try again</string>

    <!-- 提示布局 -->
    <string name="hint_layout_no_data">空空如也</string>
    <string name="hint_layout_error_request">请求出错，点击重试</string>
    <string name="hint_layout_error_network">网络错误，点击重试</string>

    <string name="hint_no_more_data">No more data</string>

    <!-- 地区对话框 -->
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>

    <!-- 日期对话框 -->
    <string name="date_title">Please select a date</string>

    <!-- 时间对话框 -->
    <string name="time_title">请选择时间</string>

    <!-- 升级对话框 -->
    <string name="update_title">发现新版本</string>

    <string name="update_content">更新内容</string>

    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>

    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>

    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>

    <string name="update_no_update">当前已是最新版本</string>

    <!-- 分享对话框 -->
    <string name="share_title">分享到&#8230;</string>

    <string name="share_platform_wechat">微信</string>
    <string name="share_platform_moment">朋友圈</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">QQ空间</string>
    <string name="share_platform_link">复制链接</string>

    <string name="share_platform_copy_hint">已复制到剪贴板</string>

    <!-- 支付密码对话框 -->
    <string name="pay_title">请输入支付密码</string>

    <!-- 选择对话框 -->
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>

    <!-- 身份校验对话框 -->
    <string name="safe_title">身份校验</string>


    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">发现</string>
    <string name="home_nav_message">消息</string>
    <string name="home_nav_me">我的</string>

    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>

    <string name="login_other">其他登录方式</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_succeed">注册成功</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>

    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>
    <string name="setting_update">检查更新</string>

    <string name="setting_password">Change password</string>
    <string name="setting_phone">修改手机</string>

    <string name="setting_auto">自动登录</string>
    <string name="setting_cache">清空缓存</string>

    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>

    <string name="setting_exit">退出登录</string>

    <!-- 关于 -->
    <string name="about_title">关于我们</string>
    <string name="about_author"><font color="#85b84f">Android</font> 轮子哥</string>

    <string name="about_copyright">Copyright © 2018 &#8211; 2020</string>

    <!-- 忘记密码 -->
    <string name="password_forget_title">忘记密码</string>

    <!-- 重置密码 -->
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_old_password_hint">Enter the old password</string>
    <string name="password_reset_phone_hint1">Enter new login password</string>
    <string name="password_reset_phone_hint2">Re-enter the password</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>
    <string name="password_reset_success">密码重置成功</string>

    <!-- 修改手机号 -->
    <string name="phone_reset_title">设置手机号</string>
    <string name="phone_reset_change_hint">下次登录请使用更换后的新手机号登录</string>
    <string name="phone_reset_commit">立即绑定</string>

    <string name="phone_reset_commit_succeed">绑定成功，下次登录请使用新手机号登录</string>

    <!-- 个人资料 -->
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_head">Avatar</string>

    <string name="personal_data_id">用户名</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">Edit nickname</string>

    <string name="personal_data_email_hint">Edit email</string>
    <string name="personal_data_intro_hint">Edit introduction</string>
    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>

    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_phone_hint">立即绑定</string>

    <!-- 浏览器 -->
    <string name="web_title">网页加载中&#8230;</string>

    <!-- 图片选择 -->
    <string name="image_select_title">图片选择</string>
    <string name="image_select_all">所有图片</string>

    <string name="image_select_total">共 %d 张</string>

    <string name="image_select_max_hint">本次最多只能选择 %d 张图片</string>

    <!-- 视频选择 -->
    <string name="video_select_title">视频选择</string>
    <string name="video_select_all">所有视频</string>

    <string name="video_select_total">共 %d 个</string>

    <string name="video_select_max_hint">本次最多只能选择 %d 个视频</string>

    <!-- 拍照 -->
    <string name="camera_launch_fail">无法启动相机</string>
    <string name="camera_image_error">目标地址错误</string>

</resources>