<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="8dp"
    tools:background="@color/white"
    tools:context="com.shq.movies.ui.dialog.SafeDialog">
    <com.hjq.widget.view.PasswordEditText
        android:id="@+id/et_password_old_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="15dp"
        android:hint="@string/password_reset_old_password_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="20dp" />
    <com.hjq.widget.view.PasswordEditText
        android:id="@+id/et_password_reset_password1"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="15dp"
        android:hint="@string/password_reset_phone_hint1"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="20dp" />

    <com.hjq.widget.view.PasswordEditText
        android:id="@+id/et_password_reset_password2"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawablePadding="15dp"
        android:hint="@string/password_reset_phone_hint2"
        android:maxLength="20"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:singleLine="true" />
</LinearLayout>